// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransactionForm should render 1`] = `
<div>
  <div
    class="sc-fzoLag fVuGur"
  >
    <form
      class="space-y-8"
      data-testid="Form"
      id="send-transaction__form"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
            label="Network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="sc-AxheI IkGcK"
            data-testid="SelectNetworkInput"
          >
            <div
              class="sc-AxhCb sc-AxhUy jFkFxS px-4"
            >
              <div
                class="sc-fzplWN fEJfwQ border-theme-neutral-light text-theme-neutral"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="SendTransactionForm__network-menu"
              aria-labelledby="SendTransactionForm__network-label"
              autocomplete="off"
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
              data-testid="SelectNetworkInput__input"
              id="SendTransactionForm__network-input"
              placeholder="Enter a network name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="SendTransactionForm__network-label"
          id="SendTransactionForm__network-menu"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="SendTransactionForm__network-item-0"
            role="option"
          >
            <div
              aria-label="Ark"
              class="sc-fzplWN bGwGlP border-theme-danger-light text-theme-danger-400"
              data-testid="NetworkIcon-ARK-Mainnet"
            >
              <div
                class="sc-Axmtr wZFix"
                data-testid="NetworkIcon__icon"
                height="26"
                width="26"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="SendTransactionForm__network-item-1"
            role="option"
          >
            <div
              aria-label="Ark Devnet"
              class="sc-fzplWN bGwGlP border-theme-primary-100 text-theme-primary-400"
              data-testid="NetworkIcon-ARK-Devnet"
            >
              <div
                class="sc-Axmtr wZFix"
                data-testid="NetworkIcon__icon"
                height="26"
                width="26"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            aria-selected="false"
            class="inline-block pt-6 mr-6 cursor-pointer"
            id="SendTransactionForm__network-item-2"
            role="option"
          >
            <div
              aria-label="Bitcoin"
              class="sc-fzplWN bGwGlP border-theme-warning-200 text-theme-warning-400"
              data-testid="NetworkIcon-BTC-Livenet"
            >
              <div
                class="sc-Axmtr wZFix"
                data-testid="NetworkIcon__icon"
                height="26"
                width="26"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="sender"
            label="Sender"
          >
            Sender
          </label>
        </div>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="sc-fzokOt dprUuD SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="sc-fzplWN exzsOf mx-4 bg-theme-neutral-200 border-theme-neutral-200"
              />
              <div
                class="absolute flex items-center right-4 space-x-3"
              >
                <div
                  class="sc-Axmtr hdGCex"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
              data-testid="SelectAddress__input"
              name="sender"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="sc-fzoyAV cTkyTj"
        >
          <div
            class="text-theme-neutral-dark hover:text-theme-primary"
          >
            <div
              class="flex items-center mb-2 space-x-2"
            >
              <div
                class="font-normal text-md transition-colors duration-100"
              >
                Select a Single or Multiple Recipient Transaction
              </div>
              <div>
                <div
                  class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
                >
                  <div
                    class="sc-Axmtr hdGCex"
                    height="20"
                    width="20"
                  >
                    <svg>
                      questionmark.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch select-buttons"
            >
              <button
                class="sc-AxjAm ddQVWI flex-1"
                color="primary"
                data-testid="add-recipient-is-single-toggle"
                type="button"
              >
                Single
              </button>
              <button
                class="sc-AxjAm ddJBbC flex-1 border-l-0"
                color="primary"
                data-testid="add-recipient-is-multiple-toggle"
                type="button"
              >
                Multiple
              </button>
            </div>
          </div>
          <div
            class="mt-8 mb-2 "
            data-testid="add-recipient__form-wrapper"
          >
            <div
              class="space-y-8"
            >
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="recipientAddress"
                    label="Recipient"
                  >
                    Recipient
                  </label>
                </div>
                <div>
                  <div
                    class="relative flex items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="absolute left-1"
                    >
                      <div
                        class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                    <input
                      class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                      data-testid="SelectRecipient__input"
                      name="recipientAddress"
                      type="text"
                      value=""
                    />
                    <div
                      class="absolute flex items-center cursor-pointer right-4 space-x-3"
                      data-testid="SelectRecipient__select-contact"
                    >
                      <div
                        class="sc-Axmtr hdGCex"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="amount"
                    label="Amount"
                  >
                    Amount
                  </label>
                </div>
                <div
                  class="sc-AxheI IkGcK"
                >
                  <input
                    class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
                    data-testid="add-recipient__amount-input"
                    name="amount"
                    placeholder="Amount"
                    type="number"
                  />
                  <div
                    class="sc-AxhCb sc-AxgMl jreOpL"
                  >
                    <button
                      class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                      data-testid="add-recipient__send-all"
                    >
                      Send All
                    </button>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="smartbridge"
            label="Smartbridge"
          >
            Smartbridge
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="Input"
            maxlength="255"
            name="smartbridge"
            placeholder=" "
            type="text"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="px-4 text-theme-neutral-light focus:outline-none"
            >
              255 Max
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="flex items-center"
      >
        <div
          class="w-2/4"
        >
          <fieldset
            class="sc-AxirZ izhStr relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="fee"
                label="Fee ARK"
              >
                Fee ARK
              </label>
              <div
                class="sc-AxheI IkGcK"
              >
                <input
                  class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value="0"
                />
                <div
                  class="absolute bottom-0 w-full px-1"
                >
                  <div
                    class="flex flex-wrap justify-center"
                    data-testid="Range"
                  >
                    <div
                      class="sc-AxmLO fErXAA"
                      data-testid="Range__track"
                      style="transform: scale(1); cursor: pointer;"
                    >
                      <div
                        class="sc-fzozJi fxOiEw"
                        data-testid="Range__track__filled"
                      >
                        <div
                          aria-valuemax="100"
                          aria-valuemin="0"
                          aria-valuenow="0"
                          class="sc-fzoLsD iBGNss"
                          data-testid="Range__thumb"
                          draggable="false"
                          role="slider"
                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-2/4 mt-6 text-right"
        >
          <div
            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
            data-testid="SelectionBar"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Last
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Min
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Average
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="sc-AxjAm ddJBbC"
          color="primary"
          data-testid="send-transaction-click-back"
          type="button"
        >
          Back
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="send-transaction-click-submit"
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`SendTransactionForm should set available amount 1`] = `
<div>
  <div
    class="sc-fzoLag fVuGur"
  >
    <form
      class="space-y-8"
      data-testid="Form"
      id="send-transaction__form"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
            label="Network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="SendTransactionForm__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="SendTransactionForm__network-input"
            id="SendTransactionForm__network-label"
          />
          <div
            class="sc-AxheI IkGcK"
            data-testid="SelectNetworkInput"
          >
            <div
              class="sc-AxhCb sc-AxhUy jFkFxS px-4"
            >
              <div
                class="sc-fzplWN fEJfwQ border-theme-neutral-light text-theme-neutral"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="SendTransactionForm__network-menu"
              aria-labelledby="SendTransactionForm__network-label"
              autocomplete="off"
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
              data-testid="SelectNetworkInput__input"
              id="SendTransactionForm__network-input"
              placeholder="Enter a network name"
              value=""
            />
          </div>
        </div>
        <ul
          aria-labelledby="SendTransactionForm__network-label"
          id="SendTransactionForm__network-menu"
          role="listbox"
        />
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="sender"
            label="Sender"
          >
            Sender
          </label>
        </div>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="sc-fzokOt dprUuD SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="sc-fzplWN exzsOf mx-4 bg-theme-neutral-200 border-theme-neutral-200"
              />
              <div
                class="absolute flex items-center right-4 space-x-3"
              >
                <div
                  class="sc-Axmtr hdGCex"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
              data-testid="SelectAddress__input"
              name="sender"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="sc-fzoyAV cTkyTj"
        >
          <div
            class="text-theme-neutral-dark hover:text-theme-primary"
          >
            <div
              class="flex items-center mb-2 space-x-2"
            >
              <div
                class="font-normal text-md transition-colors duration-100"
              >
                Select a Single or Multiple Recipient Transaction
              </div>
              <div>
                <div
                  class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
                >
                  <div
                    class="sc-Axmtr hdGCex"
                    height="20"
                    width="20"
                  >
                    <svg>
                      questionmark.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch select-buttons"
            >
              <button
                class="sc-AxjAm ddQVWI flex-1"
                color="primary"
                data-testid="add-recipient-is-single-toggle"
                type="button"
              >
                Single
              </button>
              <button
                class="sc-AxjAm ddJBbC flex-1 border-l-0"
                color="primary"
                data-testid="add-recipient-is-multiple-toggle"
                type="button"
              >
                Multiple
              </button>
            </div>
          </div>
          <div
            class="mt-8 mb-2 "
            data-testid="add-recipient__form-wrapper"
          >
            <div
              class="space-y-8"
            >
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="recipientAddress"
                    label="Recipient"
                  >
                    Recipient
                  </label>
                </div>
                <div>
                  <div
                    class="relative flex items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="absolute left-1"
                    >
                      <div
                        class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                    <input
                      class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                      data-testid="SelectRecipient__input"
                      name="recipientAddress"
                      type="text"
                      value=""
                    />
                    <div
                      class="absolute flex items-center cursor-pointer right-4 space-x-3"
                      data-testid="SelectRecipient__select-contact"
                    >
                      <div
                        class="sc-Axmtr hdGCex"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="amount"
                    label="Amount"
                  >
                    Amount
                  </label>
                </div>
                <div
                  class="sc-AxheI IkGcK"
                >
                  <input
                    class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
                    data-testid="add-recipient__amount-input"
                    name="amount"
                    placeholder="Amount"
                    type="number"
                  />
                  <div
                    class="sc-AxhCb sc-AxgMl jreOpL"
                  >
                    <button
                      class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                      data-testid="add-recipient__send-all"
                    >
                      Send All
                    </button>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="smartbridge"
            label="Smartbridge"
          >
            Smartbridge
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="Input"
            maxlength="255"
            name="smartbridge"
            placeholder=" "
            type="text"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="px-4 text-theme-neutral-light focus:outline-none"
            >
              255 Max
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="flex items-center"
      >
        <div
          class="w-2/4"
        >
          <fieldset
            class="sc-AxirZ izhStr relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="fee"
                label="Fee ARK"
              >
                Fee ARK
              </label>
              <div
                class="sc-AxheI IkGcK"
              >
                <input
                  class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value="0"
                />
                <div
                  class="absolute bottom-0 w-full px-1"
                >
                  <div
                    class="flex flex-wrap justify-center"
                    data-testid="Range"
                  >
                    <div
                      class="sc-AxmLO fErXAA"
                      data-testid="Range__track"
                      style="transform: scale(1); cursor: pointer;"
                    >
                      <div
                        class="sc-fzozJi fxOiEw"
                        data-testid="Range__track__filled"
                      >
                        <div
                          aria-valuemax="100"
                          aria-valuemin="0"
                          aria-valuenow="0"
                          class="sc-fzoLsD iBGNss"
                          data-testid="Range__thumb"
                          draggable="false"
                          role="slider"
                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-2/4 mt-6 text-right"
        >
          <div
            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
            data-testid="SelectionBar"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Last
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Min
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Average
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="sc-AxjAm ddJBbC"
          color="primary"
          data-testid="send-transaction-click-back"
          type="button"
        >
          Back
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="send-transaction-click-submit"
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </div>
</div>
`;
